--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/comptes
+spring.datasource.url=url
 spring.datasource.username=username
 spring.datasource.password=password
