Default log level set to DEBUG

--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,3 +1,5 @@
 spring.datasource.url=url
 spring.datasource.username=username
 spring.datasource.password=password
+
+logging.level.fr.jesuspatate=DEBUG
